--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "chart.js": "^3.5.1",
-    "react-chartjs-2": "^3.0.4",
+    "html2canvas": "^1.3.2",
     "jquery": "^3.6.0",
+    "jspdf": "^2.4.0",
     "mdbreact": "^5.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-chartjs-2": "^3.0.4",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
@@ -26,9 +28,9 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "sweetalert2": "^11.1.3",
     "react-table": "^7.7.0",
     "redux-devtools-extension": "^2.13.9",
+    "sweetalert2": "^11.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
